test/corpus/tests.txt
================================================================================
Empty file
================================================================================
___
(source_file)

================================================================================
File with spaces
================================================================================

___
(source_file)

================================================================================
File with tabs
================================================================================

___
(source_file)

================================================================================
Couplet
================================================================================
[00:00.90] Я шоколадный заяц, я ласковый мерзавец
[00:03.14] Я сладкий на все сто, о-о-о
[00:06.23] Я шоколадный заяц и губ твоих касаясь
[00:09.10] Я таю так легко, о-о-о

---

(source_file
  (time_tag
    (timestamp)
    (lyrics_part))
  (time_tag
    (timestamp)
    (lyrics_part))
  (time_tag
    (timestamp)
    (lyrics_part))
  (time_tag
    (timestamp)
    (lyrics_part)))

================================================================================
One-line header
================================================================================
[ti:Songname]

---
(source_file
  (title_tag
    (title_key)
    (value)))

================================================================================
Header with several ID tags
================================================================================
[ti:Songname]
[ar:Artist Artistson]

---
(source_file
  (title_tag
    (title_key)
    (value))
  (artist_tag
    (artist_key)
    (value)))

================================================================================
Single comment
================================================================================
# Test

---
(source_file
  (comment))

================================================================================
Comment pattern inside a comment
================================================================================
# Test 1 #Test 2

---
(source_file
  (comment))

================================================================================
Song lyrics with full header
================================================================================
[ti:Another Song]
[ar:Another Artist]
[al:Another Album]
[au:Another Author]
[lr:Another Lyricist]
[length: 04:20]
[offset: -50]
[tool:Another Tool v2.0]
[by:Another Tagger]
[00:00.50]Intro
[00:05.00]Verse one
[00:10.50]Continuing
[00:15.00]More verses
[00:20.50]Chorus
[00:30.00]Verse two
[00:40.50]Bridge
[00:50.00]Final chorus
[01:00.50]Outro

---
(source_file
  (title_tag
    (title_key)
    (value))
  (artist_tag
    (artist_key)
    (value))
  (album_tag
    (album_key)
    (value))
  (author_tag
    (author_key)
    (value))
  (lyricist_tag
    (lyricist_key)
    (value))
  (length_tag
    (length_key)
    (length_value))
  (offset_tag
    (offset_key)
    (offset_value))
  (tool_tag
    (tool_key)
    (value))
  (by_tag
    (by_key)
    (value))
  (time_tag
    (timestamp)
    (lyrics_part))
  (time_tag
    (timestamp)
    (lyrics_part))
  (time_tag
    (timestamp)
    (lyrics_part))
  (time_tag
    (timestamp)
    (lyrics_part))
  (time_tag
    (timestamp)
    (lyrics_part))
  (time_tag
    (timestamp)
    (lyrics_part))
  (time_tag
    (timestamp)
    (lyrics_part))
  (time_tag
    (timestamp)
    (lyrics_part))
  (time_tag
    (timestamp)
    (lyrics_part)))

================================================================================
Song lyrics with header, some comments and extra whitespaces
================================================================================

# This file was automatically generated by magic.
[ti:Song]
[ar:Artist]
[al:Album]
[00:00.09]One
    # Another weird comment.
   
[00:01.03]Two
[00:02.10]Three # This is supposed to be a lyrics part, not a comment.
[00:03.34]Four
# That's all...

---
(source_file
  (comment)
  (title_tag
    (title_key)
    (value))
  (artist_tag
    (artist_key)
    (value))
  (album_tag
    (album_key)
    (value))
  (time_tag
    (timestamp)
    (lyrics_part))
  (comment)
  (time_tag
    (timestamp)
    (lyrics_part))
  (time_tag
    (timestamp)
    (lyrics_part))
  (time_tag
    (timestamp)
    (lyrics_part))
  (comment)
